--- a/conditional_render/src/App.css
+++ b/conditional_render/src/App.css
@@ -5,4 +5,19 @@
   text-align: center;
 }
 
+.modal {
+  position: absolute;
+  background-color: black;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 3em;
+  width: 30em;
+  border-radius: 0.5em;
+  border: 0.1em solid white;
+}
 
+button {
+  margin: 0.3em;
+}
